# QuantA

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  package.json  pyproject.toml
backend/: __init__.py
backend/app/: README.md  __init__.py
backend/app/api/: dev_server.py
backend/app/app_wiring/: container.py  dev_bootstrap.py  settings.py
backend/app/fixtures/: published_snapshot.json
docs/: DESIGN.md  FRONTEND.md  HARNESS.md  OPERATIONS.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  index.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 2026-03-27-m0-execution-harness-bootstrap.acceptance.json  2026-03-27-m0-execution-harness-bootstrap.md  2026-03-27-m0-execution-harness-bootstrap.progress.md  2026-03-27-m0-harness-bootstrap.md  2026-03-27-m1-ready-snapshot-duckdb.acceptance.json  (+71 more)
docs/product-specs/: index.md  intraday-preview-layer.md
docs/references/: domain-glossary-llms.txt
frontend/src/: README.md
ops/: live.env.example
ops/launchd/: README.md  com.quanta.backend.plist.example  com.quanta.frontend.plist.example  com.quanta.pipeline.plist.example
scripts/: after_close_check.py  app_smoke.py  check_execution_harness.py  check_harness_docs.py  init_dev.sh  market_data_backfill_smoke.py  ops_doctor.py  ops_entrypoint.sh  pipeline_daemon_canary.py  pipeline_smoke.py  render_db_schema.py  run_frontend.py  smoke.sh  tushare_live_backfill_smoke.py  tushare_live_smoke.py  tushare_live_sync_smoke.py  tushare_provider_smoke.py
(+34 files in other folders)
