[project]
name = "quanta"
version = "0.1.0"
description = "QuantA local DuckDB-backed development skeleton and harness."
requires-python = ">=3.9"
dependencies = [
  "duckdb>=1.4,<2",
]

[project.optional-dependencies]
market-sync = [
  "akshare",
  "tushare",
]

[tool.pytest.ini_options]
pythonpath = ["."]
